--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^6.7.3",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.28",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
